<resources>
    <string name="app_name">کتابخوان اطلس</string>
    <string name="welcome">به اطلس خوش آمدی</string>
    <string name="login">ثبت نام</string>
    <string name="Enter">ورود مهمان</string>
    <string name="exit">خروج</string>
    <string name="guest">کاربر میهمان</string>
    <string name="no_book_download">کتابی نیست</string>
    <string name="no_book_fav">کتابی اضافه نکردی</string>
    <string name="read">خواندن</string>
    <string name="download">دانلود</string>
    <string name="remove">حذف</string>


    <string name="library">کتابخانه</string>
    <string name="shelf">کتاب های من</string>
    <string name="profile">پروفایل</string>
    <string name="favorite">علاقه مندی</string>

    <string name="recent">تازه ها</string>
    <string name="category">دسته ها</string>
    <string name="recommend">پیشنهاد</string>

    <string name="error_file_notfound">ابتدا کتاب را دریافت نمیایید</string>
    <string name="error_download">خطا در دریافت</string>

    <string name="share"> میتونی کتاب %1s تو کتابخونه اطلس بخونی </string>
</resources>