<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/library"
        android:enabled="true"
        android:icon="@drawable/ic_book"
        android:title="@string/library"/>
    <item
        android:id="@+id/shelf"
        android:enabled="true"
        android:icon="@drawable/ic_book_read"
        android:title="@string/shelf"/>

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_fav_empty"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/categoty"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/category"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"/>
</menu>